server/public/styles.css
#root {
  height: 85vh;
}

.header {
  width: 100%;
}

.app-header {
  position: sticky;
  top: 0;
  z-index: 1000;
  display: flex;
  align-items: center;
  background-color:  #4682B4;
}

.days-container {

  text-align: center;
  background-color: #4682B4;
  color: white;
}

.clear {
  height: 16px;
  background-color: white;
}

.stick-to-top {
  position: sticky;
  top: 73px;
  z-index: 1000;
}

.valid {
  border: 1px solid #22EB54;
}

.invalid {
  border: 1px solid red;
}

.bg-color-blue {
  background-color: #4682B4;
}

.recommended-cal {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #4682B4;
  font-size: 1.25rem;
}

.button {
  margin: 0.2rem;
  color: #fff;
  background-color: #4682B4;
  padding: 0 3rem;
}

.main-table-div {
  margin: auto;
  width: 80%;
}

.main-table {
  width: 100%;
}

.main-table-body {
  width: 100%;
}

.update-and-delete {
  display: flex;
  justify-content: flex-end;
}

.footer {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  bottom: 0px;
}

.footer-container {
  background-color: #4682B4;
  display: flex;
  justify-content: space-between;
  padding: .75rem 3rem;
}

.fas {
  color: #fff;
}

.calorie-title {
  margin: 8% 0% 13% 0%;
}

.calorie-form {
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: right;
}

.calorie-submit {
  margin-top: 12%;
  padding: 3% 10%;
}

.lifestyle {
  width: 49%;
}

.calorie-modal-container {
  background-color: rgb(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
}

.calorie-modal-contents {
  background-color: rgb(234, 243, 255);
  /* width: 50%; */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  padding: 3rem 1rem;
  margin: 1rem;
}

.button-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.calorie-return {
  margin: 3% 0% 15% 0%;
  padding: 1% 3%;
}

.calorie-m-div {
  margin: 4% 0% 0% 0%;
}

.calorie-table {
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.calorie-t-body {
  margin: auto;
  text-align: right;
  width: 70%;
}

.calorie-t-data-textbox {
  padding-left: 7%;
}

.navbar {
  background-color: #4682B4;
}

.navbar-brand {
  display: flex;
  color: #fff;
}

.cursor-pointer {
  cursor: pointer;
}

.pause-start {
  position: relative;
  bottom: 80px;
  right: 40px;
  background-color: blue;
  height: 30px;
  width: 30px;
}

.clock-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
}

.clock {
  width: 30vh;
  height: 30vh;
  border-radius: 50%;
  border-style: solid;
  display: flex;
  justify-content: center;
  align-items: center;
}

.fitness-modal-background {
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1000;
}

.fitness-modal-content {
  position: relative;
  background-color: white;
  height: 75%;
  margin: auto;
  width: 80%;
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.set-time {
  margin-top: 30px;
  padding: 0 25px;
}

.time-input {
  width: 75px;
  height: 75px;
  font-size: 3rem;
  text-align: center;
}

.time-seperator {
  font-size: 3rem;
  margin-bottom: 0;
}

.set-time {
  font-size: 2rem;
}

.close-modal {
  position: absolute;
  top: 5px;
  right: 10px;
  font-size: 1.5rem;
  color: red;
}

.margin-top-12 {
  margin-top: 12rem;
}

.max-width-350 {
  max-width: 350px;
}
.do-not-show {
  visibility: hidden;
}

/* .table-container {
  max-height: 373px;
} */

.timer-state {
  margin-top: 30px;
}

.add-exercise {
  position: sticky;
  width: 100%;
  bottom: 76px;
}

.size-icon {
  font-size: 2.5rem;
}

.green {
  color: #22EB54;
}

.white {
  color: white;
}

.day {
  padding: 0 0.2rem;
  border-left: 1px solid #dee2e6;
  border-right: 1px solid #dee2e6;
}

.day:hover {
  color: black;
  cursor: pointer;
  box-shadow: 0px 0px 5px #4682B4;
}

@media only screen and (max-width: 450px) {
  .responsive-centering {
    justify-content: center;
  }

  .responsive-x-padding {
    padding-left: 1rem;
    padding-right: 1rem
  }
}

@media only screen and (max-width: 1200px) {
  .app-header {
    max-width: 100%;
  }

  .recommended-cal {
    max-width: 100%;
  }

  .days-container {
    max-width: 99%;
  }

  .table-container {
    max-width: 99%;
  }

  .footer-container {
    max-width: 100%;
  }
}

